--- a/esp32/Radar/platformio.ini
+++ b/esp32/Radar/platformio.ini
@@ -12,7 +12,5 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = madhephaestus/ESP32Servo@^3.0.9
+lib_deps = madhephaestus/ESP32Servo@^3.0.9, knolleary/PubSubClient@^2.8
 monitor_speed = 115200
-upload_port = COM8
-monitor_port = COM8
